完成进程调度

--- a/操作系统/期末复习/2-进程调度.md
+++ b/操作系统/期末复习/2-进程调度.md
@@ -71,7 +71,7 @@
 5. 响应时间
    1. 从进程提交到首次运行的时间段
 
-## 算法
+## 算法（作业调度）
 
 1. 先来先服务FCFS
    1. 按作业到达的先后次序进行调度。总是首先调度在系统中等待时间最长的作业。
@@ -161,3 +161,7 @@
    1. 资源剥夺
    2. 撤销进程
    3. 进城回退
+
+# 例题
+
+[操作系统 三小时速成课 课时2 题目_哔哩哔哩_bilibili](https://www.bilibili.com/video/BV1Kd4y1Z7dd?p=3&vd_source=dc97a7c38012722963aff34e3f351c40)
